Backend/src/main/java/Reservista/example/Backend/Error/DeactivatedAccountException.java
package Reservista.example.Backend.Error;

public class DeactivatedAccountException extends Exception{

    public DeactivatedAccountException (String message){
        super(message);
    }
}
